# programming_bitcoin

./: .gitignore  README.rst  pyproject.toml
src/: address_history.py  btc_stats.py  exchange_rates.py  multisig_addr.py
src/basics/: CONTEXT.txt
src/basics/scripts/: address_history.py  block_explorer.py  btc_stats.py  exchange_rates.py  hello_btc.py  multisig_addr.py
src/programmatics/: CONTEXT.txt
src/programmatics/scripts/: .env  trigger_alert.py
tests/: test_programming_bitcoin.py
