[tool.poetry]
name = "programming_bitcoin"
version = "0.1.0"
description = ""
authors = ["xyz <jack@flnpb.com>"]

[tool.poetry.dependencies]
python = "^3.9"
bitcoin = "^1.1.42"
blockchain = "^1.4.4"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
